--- a/5/1/style.css
+++ b/5/1/style.css
@@ -18,7 +18,7 @@
     background: #f3a618; 
     border-radius: 0; 
     width: 140px; 
-    height: 140px
+    height: 140px;
   }
   100% { 
     background: #f00; 
