--- a/7/5/style.css
+++ b/7/5/style.css
@@ -37,9 +37,10 @@
    
 @media screen and (max-width: 1024px) {  
   .konti {
-    grid-template-areas: "head head"
-                                     "main main"
-                                     "sidebar sidebar"
-                                     "foot  foot";
+    grid-template-areas: "head head head"
+                          "na na na"
+                                     "main main main"
+                                     "sidebar sidebar sidebar"
+                                     "foot  foot foot";
             }
 }
