--- a/express/phonebook/views/main-layout.hbs
+++ b/express/phonebook/views/main-layout.hbs
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>Phonebook</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/bootstrap.css" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <title>Phonebook с екстри</title>
 </head>
 
 <body>
