Дребни, favicon.ico се зареди

--- a/express/phonebook/views/index.hbs
+++ b/express/phonebook/views/index.hbs
@@ -2,8 +2,7 @@
 
 {{!-- Contacts Table --}}
 <form action="/del" method="POST"><button type="submit"
-    onclick="document.getElementById('phoneTable').deleteRow(1)">Delete</button></form>
-
+    onclick="document.getElementById('phoneTable').deleteRow(1)">Delete</button>
 </form>
 <table id="phoneTable" class="table">
   <thead>
