--- a/express/phonebook/views/index.hbs
+++ b/express/phonebook/views/index.hbs
@@ -39,8 +39,8 @@
     </div>
     <div class="form-group">
       <div class="col-lg-10 col-lg-offset-2">
+        <p class="error">{{tmpProba}}</p>
         <button type="submit" class="btn btn-primary">Add</button>
-
       </div>
     </div>
   </fieldset>
