--- a/js-back-end/plays/views/layouts/main.hbs
+++ b/js-back-end/plays/views/layouts/main.hbs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Express Exam</title>
   <link href="../../static/css/style.css" type="text/css" rel="stylesheet">
+  <link rel="shortcut icon" href="../../static/img/favicon.png" type="image/png" />
 </head>
 
 <body>
@@ -14,7 +15,7 @@
       <ul>
         <li><a href="/">Home </a></li>
         {{#if user}}
-        <li><a href="#">{{user.username}}</a></li>
+        <li><a href="/user/{{user.username}}">{{user.username}}</a></li>
         <li><a href="/auth/logout">Logout</a></li>
         {{else}}
         <li><a href="/auth/login">Login</a></li>
