Sorting by array length

--- a/js-back-end/plays/views/play/details.hbs
+++ b/js-back-end/plays/views/play/details.hbs
@@ -2,6 +2,7 @@
 
   <section class="details">
     <h1>Theater title: {{play.title}}</h1>
+    <h2>{{play.createdAt}}</h2>
     <div>
       <img src="{{play.imageUrl}}" />
     </div>
