--- a/js-back-end/cat-shelter-vanilla/views/addCat.html
+++ b/js-back-end/cat-shelter-vanilla/views/addCat.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/styles/site.css">
   <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="../../images/pawprint.ico" />
   <title>Cat Shelter</title>
 </head>
 
