search by private description

--- a/js-back-end/plays/views/play/create.hbs
+++ b/js-back-end/plays/views/play/create.hbs
@@ -9,6 +9,10 @@
     <textarea name="description" placeholder="Description">{{playData.description}}</textarea>
   </div>
   <div>
+    <label for="private">Theater Private Description:</label>
+    <textarea name="private" placeholder="Private Description">{{play.private}}</textarea>
+  </div>
+  <div>
     <label for="imageUrl">Image url:</label>
     <input type="text" name="imageUrl" placeholder="Image Url" value="{{playData.imageUrl}}">
   </div>
