--- a/js-back-end/plays/views/user/register.hbs
+++ b/js-back-end/plays/views/user/register.hbs
@@ -26,7 +26,7 @@
   </div>
 
   <div class="on-dark-my">
-    <label>Select favorite ganre:
+    <label>Select favorite genre:
       <select name="ganre">
         <option value="None" {{#if userData.o.ganreNone}}selected{{/if}}>None</option>
         <option value="Science fiction" {{#if userData.o.ganreFiction}}selected{{/if}}>Science fiction</option>
