--- a/js-back-end/plays/static/css/site.css
+++ b/js-back-end/plays/static/css/site.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+
 html {
   font-family: 'Alegreya', serif;
   font-size: 16px;
@@ -167,4 +168,8 @@ form button:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.329);
   color: white;
+}
+
+.active {
+  text-decoration: darkgreen wavy underline;
 }
