--- a/js-back-end/plays/views/partials/play.hbs
+++ b/js-back-end/plays/views/partials/play.hbs
@@ -7,6 +7,7 @@
     <div class="info-buttons">
       <a class="btn details" href="/play/details/{{_id}}">Details</a>
       <span class="likes">{{usersLiked.length}} likes</span>
+      <p>{{author.username}}</p>
     </div>
   </div>
 </div>
