--- a/js-back-end/plays/views/play/details.hbs
+++ b/js-back-end/plays/views/play/details.hbs
@@ -10,6 +10,7 @@
 
   <section class="details">
     <h3>Theater Description</h3>
+    <p>{{play.author.username}}</p>
     <p>{{play.description}}</p>
     {{#if play.isAuthor}}
     <h3>Theater Private Description</h3>
